[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "flimflam-model"
version = "0.1.0"

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
ultraviolet = {version = "0.7.5", features = ["serde"]}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
