[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "flimflam"
version = "0.1.0"

[dependencies]
anyhow = "1.0.36"
flimflam-model = {path = "../flimflam-model"}
flimflam-utils = {path = "../flimflam-utils"}
flume = "0.10.0"
ggez = "0.5.1"
jsonl = "1.0.0"
portpicker = "0.1.0"
ultraviolet = "0.7.5"
